# vivial

./: .dockerignore  .editorconfig  .eslintrc.cjs  .gcloudignore  .gcloudignore-builder  .gitignore  .prettierignore  :q  README.md  TODO.txt  cloudbuild-ci.yaml  compose.yaml  deident_test.py  federation.yaml  graphql.config.ts  ngrok.yml  openaitesting.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  schema.graphql  shellcheckrc  threadingtest.py  tinyproxy.conf  tsconfig.json
apps/marketing-website/: .gitignore  app.yaml  package-lock.json  pyproject.toml  requirements.txt  webpack.config.js
apps/marketing-website/src/components/Affiliates/: index.js
apps/marketing-website/src/components/Banners/SlackBanner/: index.js
apps/marketing-website/src/components/Button/: index.js
apps/marketing-website/src/components/Copy/: index.js
apps/marketing-website/src/components/Footer/: index.js
apps/marketing-website/src/components/Header/: index.js
apps/marketing-website/src/components/HowItWorks/: index.js
apps/marketing-website/src/components/Icons/: HamburgerIcon.js  LockIcon.js
apps/marketing-website/src/components/Pages/EarlyAccessPage/: index.js
apps/marketing-website/src/components/Pages/HomePage/: index.js
apps/marketing-website/src/components/hoc/: withTitle.js
apps/marketing-website/src/theme/: index.js
apps/marketing-website/templates/: index.html.jinja
integrations/slack/: .gcloudignore  .gitignore  app.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
integrations/slack/src/: socketmode.py
integrations/slack/src/eave/: app.py  brain.py  core_api.py  demo-document-01.html  document_manager.py  eave_core.py  event_handlers.py  openai.py  settings.py  slack.py  slack_models.py  util.py
integrations/slack/tests/: __init__.py  alive_test.py
libs/eave-monitoring/: pyproject.toml
libs/eave-monitoring/src/eave/monitoring/: config.py  datastructures.py  ingestion_api.py  write_queue.py
libs/eave-monitoring/src/eave/monitoring/postgres/: agent.py
libs/eave-monitoring/src/eave/monitoring/python/: __init__.py  _dev_setup.py  _exp.py  callbacks.py
libs/eave-stdlib-py/: pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
libs/eave-stdlib-py/eave_tracing_rs/: Cargo.toml  eave_tracing.pyi  pyproject.toml
libs/eave-stdlib-py/eave_tracing_rs/src/: lib.rs
libs/eave-stdlib-py/src/eave/stdlib/: __init__.py  analytics.py  api_types.py  api_util.py  atlassian.py  auth_cookies.py  cache.py  checksum.py  config.py  cookies.py  deidentification.py  eave_origins.py  endpoints.py  exceptions.py  geo.py  headers.py  http_endpoint.py  http_exceptions.py  jwt.py  kms.py  link_handler.py  logging.py  mail.py  matched_str_enum.py  model_validators.py  openai_client.py  ranges.py  request_state.py  requests.py  requests_util.py  result.py  signing.py  slack.py  starlette.py  status.py  task_queue.py  test_util.py  testing_util.py  time.py  typing.py  (+3 more)
libs/eave-stdlib-py/src/eave/stdlib/confluence_api/: __init__.py  models.py  operations.py
libs/eave-stdlib-py/src/eave/stdlib/core_api/: __init__.py  client.py  enums.py  headers.py  models.py  operations.py  signing.py
libs/eave-stdlib-py/src/eave/stdlib/ctracing/: ctracingmodule.c
libs/eave-stdlib-py/src/eave/stdlib/eventbrite/: client.py  test.py
libs/eave-stdlib-py/src/eave/stdlib/github_api/: client.py  models.py  operations.py
libs/eave-stdlib-py/src/eave/stdlib/lib/: request_state.py  requests.py
libs/eave-stdlib-py/src/eave/stdlib/metabase_api/: __init__.py
libs/eave-stdlib-py/src/eave/stdlib/middleware/: __init__.py  base.py  body_parsing.py  deny_public_request.py  development_bypass.py  exception_handling.py  iap_jwt_validation.py  logging.py  origin.py  read_body.py  request_integrity.py  signature_verification.py
libs/eave-stdlib-py/src/eave/stdlib/nettracing/: async_wrapper.py  framework_aiohttp.py  py_agent.py  test_aiohttp.py  test_wrapper.py  trace.py  util.py
libs/eave-stdlib-py/src/eave/stdlib/pgtracing/: __init__.py  agent.py  client.py  pg_trace.py
libs/eave-stdlib-py/src/eave/stdlib/pytracing/: __init__.py  _dev_setup.py  _test.py  agent.py  callbacks.py  clickhouse.py  client.py  config.py  datastructures.py  pg_trace.py  write_queue.py
libs/eave-stdlib-py/src/eave/stdlib/slack_api/: __init__.py  operations.py
libs/eave-stdlib-py/src/eave/stdlib/test_helpers/: base_mixin.py  eventbrite_mocks_mixin.py  google_cloud_mocks_mixin.py  mocking_mixin.py  random_data_mixin.py  segment_mocks_mixin.py  sendgrid_mocks_mixin.py  slack_mocks_mixin.py
libs/eave-stdlib-py/src/eave/stdlib/third_party_api_clients/: base.py  github.py  util.py
libs/eave-stdlib-py/src/eave/stdlib/tracing/: __main__.py  tracing.py
libs/eave-stdlib-py/src/eave/stdlib/transformer_ai/: models.py  openai_client.py  token_counter.py
libs/eave-stdlib-py/tests/: __init__.py  conftest.py
libs/eave-stdlib-py/tests/stdlib/: __init__.py  analytics_test.py  auth_cookies_test.py  base.py  config_test.py  cookies_test.py  core_api_client_test.py  deidentification_test.py  deny_public_request_middleware_test.py  dummy_endpoints.py  geo_test.py  headers_test.py  link_handler_test.py  matched_str_enum_test.py  origin_middleware_test.py  read_body_middleware_test.py  signature_verification_test.py  task_queue_test.py  test_link_handler.py  time_test.py  util_test.py  utm_cookies_test.py
libs/eave-stdlib-py/tests/stdlib/core_api/: connect_test.py
libs/eave-stdlib-py/tests/stdlib/core_api/models/: account_model_test.py
libs/python/eave-stdlib/: setup.cfg
libs/python/eave-stdlib-py/: .gitignore  pyproject.toml  setup.cfg
libs/python/eave-stdlib-py/src/eave/stdlib/: api_util.py  slack.py
libs/python/eave-stdlib-py/src/eave_stdlib/: api_util.py  config.py  openai.py  slack.py  util.py
libs/python/eave-stdlib-py/src/eave_stdlib/core_api/: client.py  signing.py
libs/python/eave-stdlib/eave_stdlib/: slack.py  util.py
libs/python/eave-stdlib/src/eave_stdlib/: config.py  openai.py
libs/python/eave-stdlib/src/eave_stdlib/core_api/: client.py  (+2 more)
(+3210 files in other folders)
