[project]
name = "eave-app-marketing"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
skip_gitignore = true
quiet = true

[tool.mypy]
exclude = ["node_modules", ".venv"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = false
ignore_missing_imports = true
