[project]
name = "eave-integration-slack"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
skip_gitignore = "true"

[tool.pyright]
warnings = true

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = true
ignore_missing_imports = true
