[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eave-monitoring"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "psycopg[binary]==3.*",
  "aiohttp",
  "flask",
  "starlette",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp",
  "opentelemetry-instrumentation-aiohttp-client",
  "opentelemetry-instrumentation-starlette",
  "opentelemetry-instrumentation-flask",
]