[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eave-stdlib-py"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "google-cloud-secret-manager",
  "google-cloud-logging==3.11.0",
  "google-api-python-client",
  "google-cloud-redis",
  "google-cloud-compute",
  "google-cloud-kms",
  "slack-sdk",
  "uvicorn",
  "starlette",
  "asgiref>=3.5.2",
  "cryptography",
  "redis[hiredis]",
  "multidict",
  "aiohttp",
  "crc32c",
  "sendgrid",
  "segment-analytics-python",
]