[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eave-stdlib-py"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "google-cloud-secret-manager==2.21.1",
  "google-cloud-logging==3.11.0",
  "google-api-python-client==2.154.0",
  "google-cloud-compute==1.22.0",
  "google-cloud-kms==3.1.1",
  "slack-sdk==3.33.5",
  "uvicorn==0.32.1",
  "starlette==0.41.3",
  "asgiref>=3.5.2",
  "cryptography==41.0.7",
  "multidict==6.1.0",
  "aiohttp==3.11.0",
  "crc32c==2.7.1",
  "sendgrid==6.11.0",
  "segment-analytics-python==2.3.3",
]
