[metadata]
name = eave-stdlib-py
version = 0.1.0

[options]
python_requires = >=3.11
install_requires =
  google-cloud-secret-manager==2.*
  google-crc32c==1.*
  google-cloud-logging==3.*
  google-api-python-client==2.*
  google-cloud-pubsub==2.*
  google-cloud-kms==2.*
  google-cloud-redis==2.*
  google-cloud-runtimeconfig==0.33.*
  google-cloud-tasks==2.*
  google-cloud-compute==1.*
  openai==0.27.*
  tiktoken==0.4.*
  slack-sdk==3.*
  pydantic[email]==1.*
  starlette==0.28.*
  asgiref==3.*
  cryptography==41.*
  redis[hiredis]==4.*