[metadata]
name = eave-stdlib-py
version = 0.1.0

[options]
python_requires = >=3.11
install_requires =
  google-cloud-secret-manager==2.16.0
  google-crc32c==1.5.0
  google-cloud-logging==3.5.0
  google-api-python-client==2.81.0
  google-cloud-pubsub==2.15.0
  google-cloud-kms==2.15.0
  google-cloud-redis==2.13.0
  google-cloud-runtimeconfig==0.33.2
  google-cloud-tasks==2.13.1
  google-cloud-compute==1.11.0
  openai==0.27.2
  tiktoken==0.4.0
  slack-sdk==3.20.2
  pydantic[email]==1.10.6
  starlette==0.28.0
  asgiref==3.7.2
  cryptography==41.0.1
  redis[hiredis]==4.5.5
