[metadata]
name = eave-stdlib
version = 0.1.0

[options]
python_requires = >=3.11
install_requires =
  google-cloud-secret-manager==2.16.0
  google-crc32c==1.5.0
  google-cloud-logging==3.5.0
  google-api-python-client==2.81.0
  google-cloud-pubsub==2.15.0
  google-cloud-kms==2.15.0
  PyJWT==2.6.0
  openai==0.27.2
  tiktoken==0.3.1
  slack-sdk==3.20.2
  pydantic==1.10.6
